# adaptive-cards-py

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.sh  example.py  main.py  pylintrc  pyproject.toml  ruff.toml  text.json
.github/workflows/: pylint.yml  python-package.yml  python-publish.yml
adaptive_cards/: __init__.py  actions.py  card.py  card_types.py  client.py  clients.py  containers.py  elements.py  inputs.py  teams.py  utils.py  validation.py  validator.py
adaptive_cards/schemas/: schema-1.0.json
examples/: tasks.json
examples/simple_card/: example.py  simple_card.py  task.json
examples/update_card/: update_card.py
examples/validate_card/: validate_card.py
examples/wrap_up_card/: example_wrap_up_card.py  wrap_up_card.py
interfaces/: interface.py
src/: card_containers.py  card_elements.py  card_types.py  cards.py  utils.py
src/adaptive_cards/: __init__.py  actions.py  card.py  card_types.py  client.py  containers.py  elements.py  inputs.py  target_frameworks.py  types.py  utils.py  validation.py
src/adaptive_cards/schemas/: schema-1.2.json  schema-1.3.json  schema-1.4.json  schema-1.5.json
tests/: schema-1.2.0.json  schema-1.3.0.json  schema-1.4.0.json  schema-1.5.0.json  schema-1.6.0.json  test_card.json  test_card.py  test_client.py  test_validation.py
tests/data/: sample_card.json  sample_card_small.json
